# PAFS

./: .gitignore  CLAUDE.md  README.md  capture_token.py  pyproject.toml
src/: auth.py  commands.py  constants.py  git.py  main.py  mcp_server.py  pa_api.py  services.py  shared.py
src/flow_cli/: main.py  mcp_server.py  pa_api.py  shared.py
src/pa_templates/: default_flow.json
tests/: test_auth.py  test_commands.py  test_shared.py
