[project]
name = "pafs"
version = "0.1.2"
description = "CLI tool for managing Power Automate flows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.57.0",
]

[project.scripts]
pafs = "flow_cli.main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flow_cli"]
