[project]
name = "pafs"
version = "0.1.18"
description = "CLI tool for managing Power Automate flows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.57.0",
    "fastmcp>=2.0.0",
    "simple-term-menu>=1.6.0",
]

[project.scripts]
pafs = "flow_cli.main:main"
pafs-mcp = "flow_cli.mcp_server:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flow_cli"]
