[project]
name = "pafs"
version = "0.1.25"
description = "CLI tool for managing Power Automate flows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.57.0",
    "fastmcp>=2.0.0",
    "simple-term-menu>=1.6.0",
]

[project.scripts]
pafs = "src.main:main"
pafs-mcp = "src.mcp_server:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
